2003-07-22  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/WriteGedcom.py, src/plugins/gedcomexport.glade: New
	option for obscuring names of living people.

2003-07-21  Don Allingham  <dallingham@users.sourceforge.net>
	* src/Sources.py: sort sources by title

2003-07-21  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/MergeData.py: Various merge fixes.

2003-07-21  Tim Waugh  <twaugh@redhat.com>
	* src/RelLib.py: Made Person.probablyAlive() smarter.

2003-07-20  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/ReadGedcom.py: handle sources attached to a person (not
	to an event), handle the PAF/FTW _MARNM extension.
	* src/plugins/WebPage.py: added mini-ancestor tree patch from Daryle
	C. Lewis
	* src/GrampsParser.py: use findFamilyNoConflicts
	* src/RelLib.py: remove findFamilyNoConflict
	* src/docgen/LaTeXDoc.py: Fixed typo in latex generated comment
	* src/docgen/OpenOfficeDoc.py: Header paragraphs have the keep-with-next
	property set

2003-07-20  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/Ancestors.py: Include source notes.  Adjusted default
	styles.

2003-07-19  Don Allingham  <dallingham@users.sourceforge.net>
	* src/Sources.py: use textview instead of entry for page information
	* src/srcsel.glade: use textview instead of entry for page information
	* src/plugins/WriteGedcom.py: Allow for multi-line PAGE information for
	as source.
	* src/gramps.glade: parent relationship editor has an indicator to
	mark the parents as the preferred parents for reporting and display
	* src/ChooseParents.py: parent relationship editor has an indicator to
	mark the parents as the preferred parents for reporting and display
	
2003-07-18  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/OpenOfficeDoc.py (_write_styles_file): Switch paragraph
	alignment to "start" and "end" (was "left and "right").
	* src/plugins/AncestorReport.py: Change prefixed style name ("AHN-").
	Needed because HTML gets confised by ":" in the class name.